# sistema-cursos-2.0

beck/: pyproject.toml
front/assets/: cursos.css  home.css  matricula.css
front/static/: api.js  cursos.js  home.js  matricula.js
front/templates/: cursos.html  home.html  matricula.html
